--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     </head>
     <body>
         <div class="navbar">
-            <img class="heart" src="/img/Logo.jpg">
+            <img class="heart" src="./img/Logo.jpg">
             <nav>
-                <a>Products</a>
+                <a>Elementos</a>
                 <a>Startup tools</a>
                 <a>Features</a>
                 <a>Live support</a>
