Tercero, esta vez si xd

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="navbar">
             <img class="heart" src="./img/Logo.jpg">
             <nav>
-                <a>Elementos</a>
+                <a>Procesos</a>
                 <a>Startup tools</a>
                 <a>Features</a>
                 <a>Live support</a>
