--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <img class="heart" src="./img/Logo.jpg">
             <nav>
                 <a>Procesos</a>
-                <a>Startup tools</a>
+                <a>Herramientas Iniciales</a>
                 <a>Features</a>
-                <a>Live support</a>
-                <a>Our Plans</a>
-                <a class="active"> My Account</a>
+                <a>Soporte en vivo</a>
+                <a>Nuestros Planes</a>
+                <a class="active"> Mi cuenta</a>
             </nav>  
         </div>          
        <section class="principal">        
@@ -30,8 +30,8 @@
                         All the resources you need for a succeseful start in one place
                     </p>
                     <div class="buttons">
-                        <button class="but1">Get started today</button>
-                        <button class="but2">Our plans</button>
+                        <button class="but1">Empieza Hoy</button>
+                        <button class="but2">Nuestos planes</button>
                     </div>
                 </div>          
         </section>
