--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>  
         </div>          
        <section class="principal">        
-                <img src="/img/niña_sofa.jpg">
+                <img src="./img/niña_sofa.jpg">
                 <div class="text">  
                     <h1>
                         Seed your startup
@@ -36,7 +36,7 @@
                 </div>          
         </section>
         <section class="articles">
-                <img class="aimg" src="/img/hombres_negocio.jpg">
+                <img class="aimg" src="./img/hombres_negocio.jpg">
             <div class="text">
                 <h1 >
                     Free live support
@@ -45,7 +45,7 @@
                     We're always here whenever you need us, our free live support will answer all your questions inmediately
                 </p>
             </div>
-                <img class="aimg" src="/img/hombre_ejercicio.jpg">
+                <img class="aimg" src="./img/hombre_ejercicio.jpg">
             <div class="text">
                 <h1 >
                     Building tools
@@ -54,7 +54,7 @@
                     Our system provides the most intuitive interface built based on extensive user interaction and research
                 </p>
             </div>
-                <img class="aimg" src="/img/chica_social.jpg">
+                <img class="aimg" src="./img/chica_social.jpg">
             <div class="text">
                 <h1>
                     Community support
@@ -69,16 +69,16 @@
                 <div class="left">
                     <div class="fimg">
                         <a>
-                            <img class="rrss" src="/img/instagram.jpg">
+                            <img class="rrss" src="./img/instagram.jpg">
                         </a>
                         <a>
-                            <img class="rrss" src="/img/facebook.png">
+                            <img class="rrss" src="./img/facebook.png">
                         </a>
                         <a>
-                            <img class="rrss" src="/img/twitter.png">
+                            <img class="rrss" src="./img/twitter.png">
                         </a>
                         <a>
-                            <img class="rrss" src="/img/basketball.png">
+                            <img class="rrss" src="./img/basketball.png">
                         </a>  
                     </div>
                     <div class=ftext>
