--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <img src="./img/niña_sofa.jpg">
                 <div class="text">  
                     <h1>
-                        Lopa es ciega y no ve las traducciones
+                        Lopa, te quiero, era bromi :(
                     </h1>
                     <p>
                         All the resources you need for a succeseful start in one place
