--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="navbar">
-            <img class="heart" src="./img/Logo.jpg">
+            <img class="heart" src="./img/Miau.jpg">
             <nav>
                 <a>Procesos</a>
                 <a>Herramientas Iniciales</a>
@@ -21,7 +21,7 @@
             </nav>  
         </div>          
        <section class="principal">        
-                <img src="./img/niña_sofa.jpg">
+                <img src="./img/pokemon.jpg">
                 <div class="text">  
                     <h1>
                         Lopa, te quiero, era bromi :(
@@ -36,7 +36,7 @@
                 </div>          
         </section>
         <section class="articles">
-                <img class="aimg" src="./img/hombres_negocio.jpg">
+                <img class="aimg" src="./img/rowar.jpg">
             <div class="text">
                 <h1 >
                     Free live support
