--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>  
         </div>          
        <section class="principal">        
-                <img src="./img/pokemon.jpg">
+                <img src="./img/cagaste.png">
                 <div class="text">  
                     <h1>
                         Lopa, te quiero, era bromi :(
@@ -45,7 +45,7 @@
                     We're always here whenever you need us, our free live support will answer all your questions inmediately
                 </p>
             </div>
-                <img class="aimg" src="./img/hombre_ejercicio.jpg">
+                <img class="aimg" src="./img/pokemon.jpg">
             <div class="text">
                 <h1 >
                     Building tools
