--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         Lopa, te quiero, era bromi :(
                     </h1>
                     <p>
-                        All the resources you need for a succeseful start in one place
+                        All you need is memear and Max
                     </p>
                     <div class="buttons">
                         <button class="but1">Empieza Hoy</button>
@@ -54,7 +54,7 @@
                     Our system provides the most intuitive interface built based on extensive user interaction and research
                 </p>
             </div>
-                <img class="aimg" src="./img/chica_social.jpg">
+                <img class="aimg" src="./img/Max.jpg">
             <div class="text">
                 <h1>
                     Community support
