Prueba desde Ubuntu :3

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="navbar">
             <img class="heart" src="./img/Miau.jpg">
             <nav>
-                <a>Procesos</a>
+                <a>Procesador</a>
                 <a>Herramientas Iniciales</a>
                 <a>Features</a>
                 <a>Soporte en vivo</a>
