crecacion de carpeta assets con url relativo y coreccion de espaciados en el css

--- a/webOk/index.html
+++ b/webOk/index.html
@@ -3,14 +3,14 @@
     <head>
         <title>Startup Seed</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet"> 
     </head>
     <body>
         <div class="navbar">
-            <img class="heart" src="./img/Logo.jpg">
+            <img class="heart" src="./assets/img/Logo.jpg">
             <nav>
                 <a>Elements</a>
                 <a>Startup tools</a>
@@ -21,7 +21,7 @@
             </nav>  
         </div>          
        <section class="principal">        
-                <img src="./img/niña_sofa.jpg">
+                <img src="./assets/img/niña_sofa.jpg">
                 <div class="text">  
                     <h1>
                         Seed your startup
@@ -36,7 +36,7 @@
                 </div>          
         </section>
         <section class="articles">
-                <img class="aimg" src="./img/hombres_negocio.jpg">
+                <img class="aimg" src="./assets/img/hombres_negocio.jpg">
             <div class="text">
                 <h1 >
                     Free live support
@@ -45,7 +45,7 @@
                     We're always here whenever you need us, our free live support will answer all your questions inmediately
                 </p>
             </div>
-                <img class="aimg" src="./img/hombre_ejercicio.jpg">
+                <img class="aimg" src="./assets/img/hombre_ejercicio.jpg">
             <div class="text">
                 <h1 >
                     Building tools
@@ -54,7 +54,7 @@
                     Our system provides the most intuitive interface built based on extensive user interaction and research
                 </p>
             </div>
-                <img class="aimg" src="./img/chica_social.jpg">
+                <img class="aimg" src="./assets/img/chica_social.jpg">
             <div class="text">
                 <h1>
                     Community support
@@ -69,16 +69,16 @@
                 <div class="left">
                     <div class="fimg">
                         <a>
-                            <img class="rrss" src="./img/instagram.jpg">
+                            <img class="rrss" src="./assets/img/instagram.jpg">
                         </a>
                         <a>
-                            <img class="rrss" src="./img/facebook.png">
+                            <img class="rrss" src="./assets/img/facebook.png">
                         </a>
                         <a>
-                            <img class="rrss" src="./img/twitter.png">
+                            <img class="rrss" src="./assets/img/twitter.png">
                         </a>
                         <a>
-                            <img class="rrss" src="./img/basketball.png">
+                            <img class="rrss" src="./assets/img/basketball.png">
                         </a>  
                     </div>
                     <div class=ftext>
