añadir mas alt a las fotos

--- a/webOk/index.html
+++ b/webOk/index.html
@@ -78,7 +78,7 @@
                             <img class="rrss" src="./assets/img/twitter.png">
                         </a>
                         <a>
-                            <img class="rrss" src="./assets/img/basketball.png">
+                            <img class="rrss" src="./assets/img/basketball.png" alt="basketball ball">
                         </a>  
                     </div>
                     <div class=ftext>
